# ultralogi

./: CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  arrow_check.cjs  arrow_ipc_test.cjs  arrow_ipc_test2.cjs  arrow_ipc_test3.cjs  arrow_perf_bench.cjs  denorm_test.cjs  denorm_test2.cjs  denorm_test3.cjs  denorm_test4.cjs  eslint.config.mjs  full_pipeline_bench.cjs  index.html  package-lock.json  package.json  playwright.config.ts  query_bench2.cjs  rle_benchmark.cjs  tsconfig.json  vite.main.config.ts  vite.renderer.config.ts
scripts/: capture-electron.ts  capture.ts  debug-voxels.ts
src/: App.tsx  Fallback.tsx  Renderer.tsx  VoxelApp.tsx  VoxelDemo.tsx  main.ts  preload.ts
src/components/: TileComputeLayer.tsx  VoxelRenderer.tsx  VoxelRendererGPU.tsx
src/shaders/: instance-offset.wgsl  instance-transform.wgsl  instanced-face.wgsl  simple-load-instance.wgsl  tile-transform.wgsl
src/types/: interface.d.ts
src/utils/: arrow-ipc.ts  arrow.ts  gpu-compute.ts  query.ts
tests/: auto-screenshot.js  screenshot.ts  voxel.spec.ts
ultralogi-client/: Cargo.toml
ultralogi-client/src/: main.rs
ultralogi-common/: Cargo.toml
ultralogi-rs/: .gitignore  Cargo.toml  index.d.ts  index.mjs  package-lock.json  package.json
ultralogi-rs/scripts/: sync-exports.mjs
ultralogi-rs/src/: lib.rs
ultralogi-server/: Cargo.toml
ultralogi-server/src/: main.rs
