[package]
name = "ultralogi-rs"
version = "0.1.0"
license = "AGPL-3.0"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
mimalloc = "0.1"
duckdb = { version = "1.4.3", features = ["bundled"] }
arrow = "56"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1"
anyhow = "1.0"
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
