[package]
name = "ultralogi-rs"
version = "0.1.0"
license = "AGPL-3.0"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
mimalloc = "0.1"
duckdb = { version = "1.4.3", features = ["bundled"] }
arrow = "56"
once_cell = "1"
napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "2"
