[package]
name = "ultralogi-rs"
version = "0.1.0"
license = "AGPL-3.0"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Build DuckDB from source (bundled) to avoid runtime library path issues
# polars feature enables stmt.query_polars() -> Iterator<Item = DataFrame>
duckdb = { version = "1.4.3", features = ["bundled", "polars"] }
# Must match duckdb's arrow version (56.x)
arrow = { version = "56", default-features = false, features = ["ipc"] }
# Polars for in-memory DataFrame cache (uses same arrow arrays as DuckDB)
# ipc feature enables IpcWriter for Arrow IPC serialization
polars = { version = "0.49", features = ["ipc"] }
once_cell = "1"
anyhow = "1.0"
napi = { version = "2", features = ["napi6"] }
napi-derive = "2"
# mimalloc disabled - causes TLS issues in Electron renderer

[build-dependencies]
napi-build = "2"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
